--- a/cloud-hippo/pom.xml
+++ b/cloud-hippo/pom.xml
@@ -3,11 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cloud-uaa</artifactId>
+    <artifactId>cloud-hippo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>cloud-uaa</name>
-    <description>认证服务</description>
+    <name>cloud-hippo</name>
+    <description>基础服务（河马，绝对王者。）</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -54,12 +54,6 @@
         </dependency>
 
         <!-- ########################### 公共配置 ############################ -->
-        <!-- 属性配置 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
-        </dependency>
         <!-- 服务注册 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -114,7 +108,7 @@
     </dependencies>
 
     <build>
-        <finalName>${project.artifactId}</finalName>
+        <finalName>${project.artifactId}-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
