--- a/cloud-dependencies/pom.xml
+++ b/cloud-dependencies/pom.xml
@@ -28,6 +28,11 @@
                 <artifactId>cloud-core-starter</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.smart4y</groupId>
+                <artifactId>cloud-spider-client</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <!-- JDK9+ Jaxb模块引用 -->
             <dependency>
                 <groupId>javax.xml.bind</groupId>
