--- a/cloud-spider/pom.xml
+++ b/cloud-spider/pom.xml
@@ -24,6 +24,10 @@
         <!-- 公共模块 -->
         <dependency>
             <groupId>com.smart4y</groupId>
+            <artifactId>cloud-spider-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.smart4y</groupId>
             <artifactId>cloud-core</artifactId>
         </dependency>
         <!-- Lombok -->
