--- a/cloud-clients/cloud-hippo-client/pom.xml
+++ b/cloud-clients/cloud-hippo-client/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cloud-spider-client</artifactId>
+    <artifactId>cloud-hippo-client</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>cloud-spider-client</name>
+    <name>cloud-hippo-client</name>
     <description>基础服务客户端</description>
 
     <properties>
