--- a/cloud-core/pom.xml
+++ b/cloud-core/pom.xml
@@ -12,6 +12,7 @@
     <properties>
         <java.version>1.8</java.version>
         <alibaba.fastjson.version>1.2.37</alibaba.fastjson.version>
+        <commons-beanutils.version>1.9.3</commons-beanutils.version>
         <hutool.version>4.1.19</hutool.version>
         <swagger2.version>2.9.2</swagger2.version>
     </properties>
@@ -74,6 +75,11 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>${commons-beanutils.version}</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
