--- a/cloud-spider/pom.xml
+++ b/cloud-spider/pom.xml
@@ -26,6 +26,10 @@
             <groupId>com.smart4y</groupId>
             <artifactId>cloud-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.smart4y</groupId>
+            <artifactId>cloud-hippo-client</artifactId>
+        </dependency>
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
