--- a/cloud-hippo/src/main/resources/bootstrap.yml
+++ b/cloud-hippo/src/main/resources/bootstrap.yml
@@ -109,5 +109,5 @@ mybatis:
 opencloud:
   swagger2:
     enabled: true
-    description: 平台基础服务器
-    title: 平台基础服务器
+    description: 基础服务
+    title: 基础服务
