--- a/cloud-spider/src/main/resources/bootstrap.yml
+++ b/cloud-spider/src/main/resources/bootstrap.yml
@@ -25,42 +25,8 @@ spring:
       config:
         server-addr: @config.server-addr@
         namespace: @config.namespace@
-        #refreshable-dataids: common.properties
-        #shared-dataids: common.properties,db.properties,redis.properties,rabbitmq.properties
-  datasource:
-    url: jdbc:mysql://127.0.0.1:3306/cloud?useSSL=false&useUnicode=true&autoReconnect=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
-    username: root
-    password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    type: com.zaxxer.hikari.HikariDataSource
-    hikari:
-      pool-name: dbg
-      max-lifetime: 1765000
-      minimum-idle: 1
-      maximum-pool-size: 15
-      connection-test-query: SELECT 1
-  jpa:
-    database: mysql
-    show-sql: true
-    hibernate:
-      ddl-auto: validate
-  redis:
-    host: 127.0.0.1
-    port: 6379
-    password: 123456
-    lettuce:
-      pool:
-        max-active: 8
-        max-wait: 3000ms
-        max-idle: 8
-        min-idle: 2
-  rabbitmq:
-    host: 127.0.0.1
-    port: 5672
-    username: guest
-    password: guest
-    virtual-host: /
-    publisher-confirms: true
+        refreshable-dataids: common.yml
+        shared-dataids: common.yml,mysql.yml,redis.yml,rabbitmq.yml
   thymeleaf:
     cache: false
     encoding: UTF-8
@@ -94,54 +60,8 @@ management:
       exposure:
         # 开放部分端点和自定义端点
         include: health,info,open
-##Mapper 配置
-mapper:
-  mappers:
-    - tk.mybatis.mapper.common.Mapper
-    - com.smart4y.cloud.core.infrastructure.mapper.CloudMapper
-  not-empty: true
-  identity: MYSQL
-##分页配置
-pagehelper:
-  helper-dialect: mysql
-  reasonable: true
-  support-methods-arguments: true
-  auto-runtime-dialect: true
-  params:
-    - count=countSql
-##MyBatis配置
-mybatis:
-  check-config-location: false
-  #config-location: classpath:mybatis/mybatis-config.xml
-  mapper-locations: classpath:mapper/*.xml
-  configuration:
-    #使全局的映射器启用或禁用缓存
-    cache-enabled: true
-    #全局启用或禁用延迟加载。当禁用时，所有关联对象都会即时加载。查询时关闭关联对象即时加载以提高性能
-    lazy-loading-enabled: false
-    #当启用时，有延迟加载属性的对象在被调用时将会完全加载任意属性。否则，每种属性将会按需要加载
-    aggressive-lazy-loading: true
-    #是否允许单条sql 返回多个数据集  (取决于驱动的兼容性)
-    multiple-result-sets-enabled: true
-    #是否可以使用列的别名 (取决于驱动的兼容性)
-    use-column-label: true
-    #允许JDBC 生成主键
-    use-generated-keys: true
-    #指定MyBatis自动映射方式（数据基表的列 NONE：不映射　PARTIAL:只会自动映射简单, 没有嵌套的结果  FULL:会自动映射任意复杂的结果(嵌套的或其他情况)）
-    auto-mapping-behavior: full
-    #存在未知列时的处理方式
-    auto-mapping-unknown-column-behavior: warning
-    #默认的执行类型（SIMPLE: 简单；REUSE: 执行器可能重复使用prepared statements语句；BATCH: 执行器可以重复执行语句和批量更新）
-    default-executor-type: simple
-    #使用驼峰命名法转换字段
-    map-underscore-to-camel-case: true
-    #设置本地缓存范围（session:数据共享 statement:语句范围不会数据共享 ）
-    local-cache-scope: session
-    #设置当JDBC类型为空时，插入空值时的处理方式
-    jdbc-type-for-null: null
-    default-enum-type-handler: com.smart4y.cloud.core.infrastructure.mapper.enumhandler.EnumHandler
 opencloud:
-  # 开放api
+  ##开放api
   api:
     # 参数签名验证
     check-sign: false
