--- a/cloud-spider/pom.xml
+++ b/cloud-spider/pom.xml
@@ -7,7 +7,7 @@
     <version>0.2.0</version>
     <packaging>jar</packaging>
     <name>cloud-spider</name>
-    <description>服务网关（蜘蛛，网罗万物。）</description>
+    <description>服务网关</description>
 
     <properties>
         <java.version>1.8</java.version>
