--- a/docs/config/common.yml
+++ b/docs/config/common.yml
@@ -13,9 +13,9 @@ opencloud:
     client-secret: 0osTIhce7uPvDKHz6aa67bhCukaKoYl4
     scope: userProfile
     user-authorization-uri: ${opencloud.common.auth-server-addr}/oauth/authorize
-    access-token-uri: ${opencloud.common.api-server-addr}/admin/oauth/token
-    token-info-uri: ${opencloud.common.api-server-addr}/admin/oauth/check_token
-    user-info-uri: ${opencloud.common.api-server-addr}/admin/current/user
+    access-token-uri: ${opencloud.common.api-server-addr}/uaa/oauth/token
+    token-info-uri: ${opencloud.common.api-server-addr}/uaa/oauth/check_token
+    user-info-uri: ${opencloud.common.api-server-addr}/uaa/current/user
     #资源服务器jwt签名秘钥（适用于OpenHelper.buildJwtTokenServices(OpenCommonProperties properties)）
     jwt-signing-key: 2cde1eaa60fe4af1987f94caa13f29a2
   ##Swagger2默认配置
