--- a/cloud-spider/src/main/resources/bootstrap.yml
+++ b/cloud-spider/src/main/resources/bootstrap.yml
@@ -67,7 +67,7 @@ opencloud:
     check-sign: false
     # 访问权限控制
     access-control: true
-    # swagger调试,生产环境设为false
+    # swagger调试（生产环境设为false）
     api-debug: true
     # 始终放行
     permit-all:
