--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>cloud</artifactId>
     <version>0.3.0</version>
     <packaging>pom</packaging>
-    <name>微服务平台</name>
+    <name>cloud</name>
     <description>Cloud project for Spring Boot</description>
 
     <modules>
