--- a/cloud-vue/pom.xml
+++ b/cloud-vue/pom.xml
@@ -5,6 +5,6 @@
 
   <groupId>com.smart4y</groupId>
   <artifactId>cloud-vue</artifactId>
-  <version>0.5.0</version>
+  <version>0.6.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 </project>
