--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,12 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <!-- Spring Cloud -->
         <spring-cloud.version>Greenwich.SR2</spring-cloud.version>
         <spring-cloud-alibaba.version>0.9.0.RELEASE</spring-cloud-alibaba.version>
+        <!--镜像前缀-->
+        <docker.image.prefix>cloud</docker.image.prefix>
+        <maven-dockerfile-plugin.version>1.4.10</maven-dockerfile-plugin.version>
     </properties>
 
     <parent>
@@ -94,6 +98,35 @@
                         <!-- 依赖业务模块 version:${project.version} type:jar -->
                     </dependencies>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                </plugin>
+                <!-- Docker镜像插件 -->
+                <plugin>
+                    <groupId>com.spotify</groupId>
+                    <artifactId>dockerfile-maven-plugin</artifactId>
+                    <version>${maven-dockerfile-plugin.version}</version>
+                    <configuration>
+                        <!-- Docker私服地址 -->
+                        <repository>${docker.image.prefix}/${project.artifactId}</repository>
+                        <tag>${project.version}</tag>
+                        <buildArgs>
+                            <!-- 提供参数向Dockerfile传递 -->
+                            <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+                        </buildArgs>
+                    </configuration>
+                    <!--<executions>
+              <execution>
+                  <id>default</id>
+                  <goals>
+                      &lt;!&ndash; 如果package时不想用docker打包就注释掉这个goal &ndash;&gt;
+                      <goal>build</goal>
+                      <goal>push</goal>
+                  </goals>
+              </execution>
+          </executions>-->
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -110,6 +143,8 @@
                 <config.namespace/>
                 <config.server-addr>127.0.0.1:8848</config.server-addr>
                 <discovery.server-addr>127.0.0.1:8848</discovery.server-addr>
+                <!-- Docker私有镜像仓库 -->
+                <docker.registry>10.0.3.80:2375</docker.registry>
             </properties>
         </profile>
         <profile>
@@ -120,6 +155,8 @@
                 <config.namespace/>
                 <config.server-addr>127.0.0.1:8848</config.server-addr>
                 <discovery.server-addr>127.0.0.1:8848</discovery.server-addr>
+                <!-- Docker私有镜像仓库 -->
+                <docker.registry>10.0.3.80:2375</docker.registry>
             </properties>
         </profile>
     </profiles>
