--- a/cloud-hippo/Dockerfile
+++ b/cloud-hippo/Dockerfile
@@ -14,7 +14,7 @@ MAINTAINER yt cloud@smart4y.com
 VOLUME /tmp
 ARG JAR_FILE
 COPY ${JAR_FILE} app.jar
-RUN bash -c 'touch /app.jar'
+#RUN bash -c 'touch /app.jar'
 ENV TZ=Asia/Shanghai
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 #EXPOSE 8223
