dev docker 两套环境部署

--- a/cloud-hippo/Dockerfile
+++ b/cloud-hippo/Dockerfile
@@ -18,4 +18,4 @@ COPY ${JAR_FILE} app.jar
 ENV TZ=Asia/Shanghai
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 #EXPOSE 8223
-ENTRYPOINT java ${JAVA_OPTS} -Djava.security.egd=file:/dev/./urandom -jar /app.jar
+ENTRYPOINT ["java", "${JAVA_OPTS}", "-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar", "--spring.profiles.active=docker"]
