--- a/cloud-hippo/src/main/resources/application-docker.yml
+++ b/cloud-hippo/src/main/resources/application-docker.yml
@@ -9,7 +9,7 @@ spring:
       id: ${spring.application.name}:${server.port}
     nacos:
       discovery:
-        server-addr: ${DOCKER_NACOS_ADDR}:8848
+        server-addr: ${NACOS_HOST}:8848
   main:
     allow-bean-definition-overriding: true
   mvc:
@@ -18,7 +18,7 @@ spring:
   resources:
     add-mappings: false
   datasource:
-    url: jdbc:mysql://${DOCKER_MYSQL_HOST}:3306/cloud?useSSL=false&useUnicode=true&autoReconnect=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://${DB_HOST}:3306/${DB_SCHEMA}?useSSL=false&useUnicode=true&autoReconnect=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -30,14 +30,15 @@ spring:
       maximum-pool-size: 15
       connection-test-query: SELECT 1
   rabbitmq:
-    host: ${DOCKER_RABBITMQ_HOST}
+    host: ${RABBITMQ_HOST}
     port: 5672
     username: guest
     password: guest
     virtual-host: /
     publisher-confirms: true
   redis:
-    host: ${DOCKER_REDIS_HOST}
+    host: ${REDIS_HOST}
+    database: ${REDIS_DB}
     port: 6379
     password: 123456
     lettuce:
@@ -102,11 +103,11 @@ opencloud:
   ##资源服务器公共配置
   common:
     #API网关访问地址
-    api-server-addr: http://localhost:8888
+    api-server-addr: http://127.0.0.1:8888
     #管理后台前端访问地址
-    admin-server-addr: http://localhost:8080
+    admin-server-addr: http://127.0.0.1:8080
     #平台认证服务地址
-    auth-server-addr: http://localhost:8211
+    auth-server-addr: http://127.0.0.1:8211
     #默认使用OpenHelper.buildRedisTokenServices(RedisConnectionFactory redisConnectionFactory)
     #公共客户端配置（适用于OpenHelper.buildRemoteTokenServices(OpenCommonProperties properties)）
     client-id: 7gBZcbsC7kLIWCdELIl8nxcs
