--- a/cloud-hippo/Dockerfile
+++ b/cloud-hippo/Dockerfile
@@ -17,7 +17,7 @@ COPY ${JAR_FILE} app.jar
 #RUN bash -c 'touch /app.jar'
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo 'Asia/Shanghai' > /etc/timezone
 EXPOSE 8223
-ENV JAVA_OPTS="--spring.profiles.active=docker -Xms128m -Xmx256m"
-#ENTRYPOINT ["java","-Xms128m","-Xmx256m", "-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar", "--spring.profiles.active=docker"]
+ENV JAVA_OPTS="-DXms128m -DXmx512m"
+#ENTRYPOINT ["java","-Xms128m","-Xmx256m", "-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
 
 ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar"]
