--- a/cloud-dependencies/pom.xml
+++ b/cloud-dependencies/pom.xml
@@ -7,7 +7,8 @@
     <artifactId>cloud-dependencies</artifactId>
     <version>0.8.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>cloud-dependencies</name>
+    <!--    <name>cloud-dependencies</name>-->
+    <name>#1 模块依赖管理</name>
     <description>依赖管理</description>
 
     <properties>
