--- a/cloud-generator/pom.xml
+++ b/cloud-generator/pom.xml
@@ -6,8 +6,9 @@
     <artifactId>cloud-generator</artifactId>
     <version>0.8.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>cloud-generator</name>
-    <description>自动生成插件</description>
+    <!--    <name>cloud-generator</name>-->
+    <name>#3 自动生成插件</name>
+    <description>TkMapper代码自动生成插件</description>
 
     <properties>
         <mybatis-generator-core.version>1.3.7</mybatis-generator-core.version>
