--- a/cloud-spider/pom.xml
+++ b/cloud-spider/pom.xml
@@ -6,7 +6,8 @@
     <artifactId>cloud-spider</artifactId>
     <version>0.8.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>cloud-spider</name>
+    <!--    <name>cloud-spider</name>-->
+    <name>#6 平台网关服务</name>
     <description>服务网关</description>
 
     <properties>
