--- a/cloud-vue/pom.xml
+++ b/cloud-vue/pom.xml
@@ -7,4 +7,6 @@
   <artifactId>cloud-vue</artifactId>
   <version>0.8.0-SNAPSHOT</version>
   <packaging>pom</packaging>
+  <!--  <name>cloud-vue</name>-->
+  <name>#7 前端页面模块</name>
 </project>
