--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,11 +95,11 @@ services:
       - mysql
       - redis
       - rabbitmq
-  #    links:
-  #      - nacos
-  #      - mysql
-  #      - redis
-  #      - rabbitmq
+    healthcheck:
+      test: "/bin/netstat -anp | grep 8888 && exit 0 || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 30
   owl:
     image: cloud/cloud-owl:1.1.0-SNAPSHOT
     container_name: owl
@@ -108,6 +108,7 @@ services:
       - cloud
     ports:
       - "7211:7211"
+    command: wait-for-it.sh
     environment:
       - NACOS_HOST=nacos
       - DB_HOST=mysql
@@ -119,16 +120,12 @@ services:
     volumes:
       - "${DOCKER_VOL_DIR}/cloud-owl/logs:/logs/cloud-owl"
     depends_on:
-      - nacos
-      - mysql
-      - redis
-      - rabbitmq
       - hippo
-  #    links:
-  #      - nacos
-  #      - mysql
-  #      - redis
-  #      - rabbitmq
+    healthcheck:
+      test: "/bin/netstat -anp | grep 7211 && exit 0 || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 5
   spider:
     image: cloud/cloud-spider:1.1.0-SNAPSHOT
     container_name: spider
@@ -148,17 +145,12 @@ services:
     volumes:
       - "${DOCKER_VOL_DIR}/cloud-spider/logs:/logs/cloud-spider"
     depends_on:
-      - nacos
-      - mysql
-      - redis
-      - rabbitmq
-      - hippo
       - owl
-#    links:
-#      - nacos
-#      - mysql
-#      - redis
-#      - rabbitmq
+    healthcheck:
+      test: "/bin/netstat -anp | grep 8888 && exit 0 || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 networks:
   #基础设施层网络
