--- a/cloud-hippo/Dockerfile
+++ b/cloud-hippo/Dockerfile
@@ -16,7 +16,9 @@ ARG JAR_FILE
 COPY ${JAR_FILE} app.jar
 ARG IP_DB_FILE
 COPY ${IP_DB_FILE} /tmp/ip2region.db
+COPY wait-for-it.sh /wait-for-it.sh
+RUN chmod 777 /wait-for-it.sh
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo 'Asia/Shanghai' > /etc/timezone
 EXPOSE 8223
 ENV JAVA_OPTS="-DXms128m -DXmx512m"
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar"]
+ENTRYPOINT ["sh", "-c", "/wait-for-it.sh localhost:8848", "--", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar"]
