--- a/cloud-owl/Dockerfile
+++ b/cloud-owl/Dockerfile
@@ -14,7 +14,9 @@ MAINTAINER yt cloud@smart4y.com
 VOLUME /tmp
 ARG JAR_FILE
 COPY ${JAR_FILE} app.jar
+COPY wait-for-it.sh /wait-for-it.sh
+RUN chmod 777 /wait-for-it.sh
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo 'Asia/Shanghai' > /etc/timezone
 EXPOSE 7211
 ENV JAVA_OPTS="-DXms128m -DXmx512m"
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar"]
+ENTRYPOINT ["sh", "-c", "/wait-for-it.sh localhost:8223", "--", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar"]
