--- a/cloud-spider/Dockerfile
+++ b/cloud-spider/Dockerfile
@@ -14,7 +14,9 @@ MAINTAINER yt cloud@smart4y.com
 VOLUME /tmp
 ARG JAR_FILE
 COPY ${JAR_FILE} app.jar
+COPY wait-for-it.sh /wait-for-it.sh
+RUN chmod 777 /wait-for-it.sh
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo 'Asia/Shanghai' > /etc/timezone
 EXPOSE 8888
 ENV JAVA_OPTS="-Xms128m -Xmx512m"
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar"]
+ENTRYPOINT ["sh", "-c", "/wait-for-it.sh localhost:7211", "--", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar"]
